# Smart-Noter

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  biome.json  index.html  lefthook.yml  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.storybook/: main.ts  preview.tsx
docs/superpowers/plans/: 2026-05-17-foundation-plan-part2.md  2026-05-17-foundation-plan-part3.md  2026-05-17-foundation-plan.md  2026-05-19-sub2-audio-capture-plan.md  2026-06-15-sub3a-whisper-transcription.md  2026-06-17-sub3b-speaker-diarization.md  2026-06-22-sub4a-soft-delete.md  2026-06-23-sub4b-crud.md  2026-06-23-sub4d-fts-search.md  (+13 more)
handoff/smart-noter/: README.md
sandbox/: smart-noter.wsb
scripts/: check-no-hardcoded-strings.mjs  check-stories-coverage.mjs  extract-mocks.mjs  generate-i18n-keys.mjs  stage-dlls.mjs
src/: App.module.css  App.tsx  ErrorBoundary.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.sqlx/: query-0ce3659c40e2e8f51d82fd508b7ba8bcd10500342e400a3cfe5122c541a56f6c.json  query-1252641d7f01524d24a1d679cdea6da8394e6dbc20e98667267bf3b6355ac00f.json  query-188d9712bd02c6ec2f70f512c8822faf2ebe5f3afa5640d4dea812ea5dc534a8.json  query-1b96643ec202a099e3a42249e1949b014e2054d483f152737655f202e79b7313.json  query-207177ef5ad936c56eea4ce645fe59660b012346be91e2bde19831077169ef0a.json  query-241dfc1432feb777b4964f9a6bcfc3e74681b458cb1ed48e96b44add6f67b319.json  query-2a05f76a052a1d9fe22a1bdcda808126a20af8a12359139ced4c4bb17acf186e.json  query-3bbe6053c8c3029d9f68c71fbafffd16de0fc006054ac9bb95e55f62fa6ac1a2.json  query-3eecf4eb471ea39624daa7e5f978c6c2ac71143c120cbbc5de53e767b81b0326.json  query-423772388c66b880ab9e0c93552d1648e0a3688a38e46b5f99134b803c7b46b8.json  query-45ab9ef5ea1bcab6c55869c97127906229e120506ad4de31d096f386143f8704.json  query-4732c0ac7628dba5598eef71f3cc5beecde1b1b142131b5784e2fb9969516fb3.json  query-4a31b2d9a345aeabb31da14c1f8f6adec4154b7b338ea32ad7fcaf7b469c5590.json  query-4e206cb1544cb995af19fa10637ca859d510d4a7c2fe5a04871e47ac2b727b35.json  query-52f79892d84a9eb015bc04c85cbd6435de77ad986b5284cea9f6e2ad0c45c43a.json  query-5346ab8ff01c45a1c07c0d37f750e9940905d483c7769e7a7ea44263c5560f51.json  query-571a088588831909302bffcda93b9f7e7ecd00e3e49a2a9c1117bf747b96f7dc.json  query-5eafec5f8411a715afe213611193759febe6ee4febd845b4ce3fb78ae555da76.json  query-74c934e455396d77d6d2c6022e38a00354316183f27a2219528303cc942b43d7.json  query-7c0e73bb66adbb97bd2ac9d93fd6f89143a4f3b9aaeac26c24b76fdb6c2b1d63.json  query-986ae9d8cecdfabd5f6930776165d10c2a8bdc2947035fc13057baf747474155.json  query-ab8a86eacabdf7af204d7ebd9b1fb78856acb06957a3d9a9078440ef0755baa9.json  query-ad5ffbc61c8cbed2c82fe274a6ac1c1949e1e3fba687885e8d837b477fb2e75c.json  query-ba7c94350ca0b11ddac2a1dc74076ba5c336922c28624f0e56b204f71c33747b.json  query-bcb396984c640293cf40c2324e6ad3feea80f0b27808c14a4e86d32c4b26bd54.json  query-e500e094b00f9a5f2a33ee71e94f8572cab6a6b8dceab841f0c291ea94c8f949.json  query-e5e6a39bc74178d5708cf639bb930d7afeb2cffc3453cb32a048844517cfbf51.json  query-f31c13776c6b8b31179b53b2a30d339f83b206dfca492331685cbb9883827b3a.json
src-tauri/capabilities/: default.json
src-tauri/crates/audio/: Cargo.toml
src-tauri/crates/audio/src/: devices.rs  error.rs  lib.rs
src-tauri/crates/audio/src/capture/: echo_canceller.rs  meter.rs  mic_comms.rs  mixer.rs  mod.rs  recorder.rs  session.rs  stream.rs  writer.rs
src-tauri/crates/audio/tests/: wav_roundtrip.rs
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/core/src/: ai_prompt.rs  error.rs  lang.rs  lib.rs  traits.rs
src-tauri/crates/core/src/models/: action.rs  ai.rs  audio_device.rs  decision.rs  marker.rs  meeting.rs  meeting_asset.rs  mod.rs  participant.rs  search.rs  settings.rs  template.rs
src-tauri/crates/db/: Cargo.toml  seed_data.json
src-tauri/crates/db/migrations/: 0001_init.sql  0002_meeting_assets.sql  0003_transcript_end_seconds.sql  0004_meeting_soft_delete.sql  0005_meeting_fts.sql  0006_ai.sql  0007_provider_secrets.sql  0008_markers.sql
src-tauri/crates/db/src/: connection.rs  lib.rs  seed.rs
src-tauri/crates/db/src/repos/: actions_repo.rs  blockers_repo.rs  chat_repo.rs  decisions_repo.rs  embeddings_repo.rs  markers_repo.rs  meeting_assets_repo.rs  meetings_repo.rs  mod.rs  participants_repo.rs  search_repo.rs  secrets_repo.rs  settings_repo.rs  templates_repo.rs  transcript_repo.rs
src-tauri/crates/db/tests/: migration.rs
src-tauri/crates/diarize/: Cargo.toml  build.rs
src-tauri/crates/diarize/src/: align.rs  diarize.rs  error.rs  lib.rs  models.rs  overlap.rs
src-tauri/crates/diarize/tests/: spike.rs
src-tauri/crates/export/: Cargo.toml
src-tauri/crates/export/src/: audio.rs  lib.rs  markdown.rs  pdf.rs
src-tauri/crates/llm/: Cargo.toml
src-tauri/crates/llm/src/: chat.rs  engine.rs  lib.rs  models.rs  prompt.rs  summarize.rs
src-tauri/crates/providers/: Cargo.toml
src-tauri/crates/providers/src/: anthropic.rs  azure.rs  http_common.rs  lib.rs  openai.rs  sse.rs  stt.rs
src-tauri/crates/whisper/: Cargo.toml
src-tauri/crates/whisper/src/: decode.rs  error.rs  lib.rs  models.rs  transcribe.rs
src-tauri/crates/whisper/tests/: spike.rs
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  secrets.rs  state.rs
src-tauri/src/commands/: ai.rs  audio.rs  devices.rs  export.rs  log.rs  markers.rs  meetings.rs  mod.rs  provider_factory.rs  providers.rs  settings.rs  templates.rs  transcription.rs
src-tauri/src/events/: mod.rs
src/i18n/: index.ts  useT.test.tsx  useT.ts
src/ipc/: commands.ts  error.test.ts  error.ts  events.ts
src/router/: NotFoundRedirect.tsx  paths.test.ts  paths.ts  routes.tsx
src/store/: hooks.ts  index.ts
src/styles/: globals.css  reset.css
src/theme/: ThemeProvider.test.tsx  ThemeProvider.tsx  accent.test.ts  accent.ts  tokens.module.css
src/utils/: format.test.ts  format.ts
tests/e2e/: navigation.spec.ts  persistence.spec.ts  visual.spec.ts
(+202 files in other folders)
