[workspace]
resolver = "2"
members = [
  ".",
  "crates/core",
  "crates/db",
  "crates/audio",
  "crates/whisper",
  "crates/diarize",
  "crates/providers"
]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"

[workspace.dependencies]
tauri = { version = "2.1", features = [] }
tauri-build = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate", "chrono"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
specta = { version = "2.0.0-rc.20", features = ["derive"] }
specta-typescript = "0.0.7"
tauri-specta = { version = "2.0.0-rc.20", features = ["derive", "typescript"] }
uuid = { version = "1.10", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Binary crate (smart-noter) inherits its own package config:
[package]
name = "smart-noter"
version.workspace = true
edition.workspace = true
default-run = "smart-noter"

[lib]
name = "smart_noter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "smart-noter"
path = "src/main.rs"

[[bin]]
name = "specta-export"
path = "src/bin/specta_export.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri = { workspace = true, features = [] }
tauri-plugin-log = "2.0"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
sqlx.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
specta.workspace = true
specta-typescript.workspace = true
tauri-specta.workspace = true

parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
chrono.workspace = true

smart-noter-core = { path = "crates/core" }
smart-noter-db = { path = "crates/db" }
smart-noter-audio = { path = "crates/audio" }
smart-noter-whisper = { path = "crates/whisper" }
smart-noter-diarize = { path = "crates/diarize" }
smart-noter-providers = { path = "crates/providers" }
