[package]
name = "smart-noter-diarize"
version.workspace = true
edition.workspace = true

[dependencies]
# `static` static-links sherpa-onnx (no onnxruntime.dll to ship).
# `download-binaries` fetches pre-built static libs from GitHub — avoids the CMake/wmic
# bug on Windows 11 where wmic was removed (sherpa-onnx show-info.cmake:66 fails).
# `tts` is explicitly excluded (default feature); no other defaults remain.
sherpa-rs = { version = "0.6.8", default-features = false, features = ["static", "download-binaries"] }
ureq = "2.10"
sha2 = "0.10"
serde = { workspace = true }
thiserror = { workspace = true }
smart-noter-core = { path = "../core" }

[features]
# Soft-gated integration tests (need the ONNX models + static libs), like whisper-integration.
diarize-integration = []

[dev-dependencies]
tempfile = "3"
hound = "3.5"
