[package]
name = "smart-noter-diarize"
version.workspace = true
edition.workspace = true

[dependencies]
# `download-binaries` fetches pre-built sherpa-onnx libs from GitHub releases.
# We use the DYNAMIC variant (no `static` feature): the prebuilt static libs use
# the static MSVC C++ runtime (/MT), which fatally conflicts at link time with
# whisper.cpp + other C deps (built /MD) in the same binary (LNK2005/LNK1169).
# Dynamic sherpa is /MD-compatible, links cleanly, and ships onnxruntime.dll +
# sherpa-onnx.dll (copied next to the exe by sherpa-rs-sys; bundled in the MSI).
# `tts` is excluded (unused).
sherpa-rs = { version = "0.6.8", default-features = false, features = ["download-binaries"] }
ureq = "2.10"
sha2 = "0.10"
serde = { workspace = true }
thiserror = { workspace = true }
smart-noter-core = { path = "../core" }

[features]
# Soft-gated integration tests (need the ONNX models + static libs), like whisper-integration.
diarize-integration = []

[dev-dependencies]
tempfile = "3"
hound = "3.5"
