[package]
name = "smart-noter-providers"
version.workspace = true
edition.workspace = true

[dependencies]
smart-noter-core = { path = "../core" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tiny_http = "0.12"
